# chip8

./: .gitignore  Cargo.toml  README.md
fullstack/: readme.md
fullstack/numbers/: Cargo.toml
fullstack/numbers/src/: lib.rs
game/: readme.md
game/master/: Cargo.toml
game/master/src/: audio.rs  main.rs  pong.rs
game/master/src/systems/: mod.rs  paddle.rs  winner.rs
src/: main.rs
